feat: Refactor terrain command and add logging utility